--- a/Nandoso/feedback.html
+++ b/Nandoso/feedback.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="Content/Site.css" />
     <link href="Content/style.css" rel="stylesheet" />
     <link href="Content/validatorTidyMode.css" rel="stylesheet" />
+    <style type="text/css">
+        #responsive-menu {
+            color: white;
+        }
+    </style>
+
     <script src="Scripts/jquery-2.1.4.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/formValidator-4.0.1.js"></script>
@@ -54,8 +60,13 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-collapse collapse">
+        <button class="navbar-toggle" id="responsive-menu" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+            Menu
+        </button>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+
+            <div class="container">
+
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="specials.html">Specials</a></li>
