--- a/Nandoso/index.html
+++ b/Nandoso/index.html
@@ -11,12 +11,21 @@
     <link href="Content/style.css" rel="stylesheet" />
     <script src="Scripts/jquery-2.1.4.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
-
+    <style type="text/css">
+        #responsive-menu {
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-collapse collapse">
+        <button class="navbar-toggle" id="responsive-menu" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+            Menu
+        </button>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+
             <div class="container">
+
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="specials.html">Specials</a></li>
