--- a/Nandoso/feedback.html
+++ b/Nandoso/feedback.html
@@ -41,6 +41,7 @@
             $("#email").formValidator({
                 onShow: "Please input your email",
                 onFocus: "At least 6 characters, maximum is 100 characters",
+                onCorrect: "The length is good"
             })
           .inputValidator({
               min: 6,
